manifests/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/$ / redirect;
      sub_filter '<base href="/">' '<base href="/">';
      sub_filter_once on;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s.dakshayahuja.in
    secretName: k8s-tls
  rules:
  - host: k8s.dakshayahuja.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
